TFP-6405: Flytte ap refusjonsfrist (#714)
*Flytter aksjonspunkt for refusjonsfrist inn i aksjonspunkt for tilkommet refusjon
*Det nye aksjonspunktet utledes nå fra begge disse
*Utvider eksisterende dto for refusjon til å inneholde refusjonsfrist og oppdaterer tilhørende mapping
*Slår sammen felles logikk og sletter duplikate filer
Andre endringer:
*Navnendring på variabler, originaleGrunnlag -> forrigeGrunnlagListe, BeregningsgrunnlagGrunnlagDto(Builder) får nå *tydeligere navn og ikke bare grunnlag(Builder)
*Ordene revurdering og gjeldende tas bort fra variabelnavn da disse er implisitt
*Endret RefusjonPeriodeEndring til record
*Generell refaktorering og omstrukturering av kode
*Litt renaming av filer og flytting til riktige mapper
*Lagt in todos for kode som kan slettes etter prodsetting og migrering av gamle saker

Co-authored-by: anjaaalerud <anja.gotesen.aalerud@nav.no>